# wasm-typst-studio-rs

./: .gitignore  .mcp.json  CHANGELOG.md  CHANGELOG_TAURI.md  Cargo.toml  DOCUMENTATION_UPDATES.md  QUICK_START.md  README.md  TAURI_INTEGRATION.md  Trunk-release.toml  Trunk.toml  index.html  package-lock.json  package.json  rustc-ice-2025-10-05T11_22_55-653862.txt  tailwind.config.js  tailwind.css
.github/workflows/: deploy.yml
examples/: example.typ  example2.typ  refs.yml
public/: output.css  styles.css  styles.scss  tailwind.css
scripts/: compress-wasm.sh  size-report.sh
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/compiler/: ide.rs  mod.rs  packages.rs  typst.rs
src/components/: editor.rs  image_gallery.rs  mod.rs  preview.rs
src/utils/: download.rs  editing.rs  highlight.rs  image_manager.rs  image_storage.rs  mod.rs  package_storage.rs  project.rs  share.rs
templates/: article.typ  blank.typ  ieee.typ
tests/e2e/: run.sh  smoke.mjs
