[package]
name = "wasm-typst-studio-rs"
version = "0.2.0"
edition = "2021"
authors = ["dio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    # execCommand("insertText") for undo-preserving programmatic edits
    "HtmlDocument",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "File",
    "FileList",
    "FileReader",
    "Storage",
    # Theme persistence (follow OS color scheme) + Escape-to-close handler
    "MediaQueryList",
    "KeyboardEvent",
    # Drag-and-drop image upload
    "DragEvent",
    "DataTransfer",
    # Shareable URL (source encoded in the fragment)
    "Location",
    "History",
    # Clipboard API (requires web_sys_unstable_apis)
    "Navigator",
    "Clipboard",
    # Fetching @preview package tarballs
    "Request",
    "Response",
    # Preview UX: page indicator + click-to-jump
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "Element",
    "NodeList",
    "DomRect",
    "MouseEvent",
    # IndexedDB for image storage
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbVersionChangeEvent",
    "IdbTransactionMode",
    "IdbCursorDirection",
    "DomStringList",
] }
gloo-timers = { version = "0.3", features = ["futures"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Base64 decoding for images
base64 = "0.22"

# @preview package support: gunzip + untar the tarballs from packages.typst.org.
# flate2's pure-Rust miniz_oxide backend is wasm-safe (no C/zlib-sys).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"

# Typst compilation
typst-as-lib = { git = "https://github.com/Relacibo/typst-as-lib", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst = "0.13"
typst-ide = "0.13"
typst-svg = "0.13"
typst-pdf = "0.13"
typst-syntax = "0.13"

[dev-dependencies]
wasm-bindgen-test = "0.3"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Rimuovi debug symbols per ridurre bundle size
