[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.5", features = [] }

# Optimized release profile for reduced binary size
[profile.release]
codegen-units = 1      # Better optimization (slower compile)
lto = true             # Link-time optimization
opt-level = "s"        # Optimize for size
panic = "abort"        # Smaller panic handling
strip = true           # Remove debug symbols
